Refactor project structure and update assembly information
- Updated assembly information for Kolokwium.DAL, Kolokwium.Model, Kolokwium.Services, and Kolokwium.ViewModel to include new informational versioning.
- Modified the Add.cshtml view to change the label from "AutorId" to "Autor" for better clarity.
- Added SourceLink JSON files for all projects to enable source linking for debugging.
- Updated various binary files (.dll, .pdb) across the projects to reflect recent changes.
- Ensured all project references and file lists are up to date in the obj/Debug/net8.0 directories.

--- a/Kolokwium.Web/Views/AddKsiazka/Add.cshtml
+++ b/Kolokwium.Web/Views/AddKsiazka/Add.cshtml
@@ -8,7 +8,8 @@
         <input asp-for="Tytul" />
     </div>
     <div>
-        <label>AutorId</label>
+        <label>Autor</label>
+        
         <input asp-for="AutorId" />
     </div>
     <div>
